[package]
name = "pallet-council"
version = "4.0.0-dev"
description = "Housing council govenance process"
authors = ["Fair Squares"]
homepage = "https://fair-squares.nl"
edition = "2021"
license = "Apache 2.0"
publish = false
repository = "https://github.com/Fair-Squares/fair-squares"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-std = { default-features = false,git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0" }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0" }
scale-info = {version = "2.10.0", default-features = false, features = ["derive"] }
frame-benchmarking = {   default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0" }
frame-support = {   default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0" }
frame-system = {   default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0" }
serde = { version = "1.0.183", default-features = false, features = ["derive"] }
pallet-balances = {   default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0" }
pallet-sudo = {   default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0" }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0", default-features = false }
pallet-roles = { default-features = false, path="../roles" }
pallet-onboarding = { default-features = false, path="../onboarding" }
pallet-nft = { default-features = false, path="../nft" }

[dev-dependencies]
sp-core = {git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde/std",
	"sp-std/std",
	"pallet-balances/std",
	"pallet-sudo/std",
	"pallet-collective/std",
    "pallet-roles/std",
    "pallet-onboarding/std",
	"pallet-nft/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	]

try-runtime = [
	"frame-support/try-runtime",
	]
