[package]
name = "pallet-nft"
version = "4.0.0"
description = "Nft management Pallet"
authors = ["Fair Squares"]
homepage = "https://fair-squares.nl"
edition = "2021"
license = "Apache 2.0"
publish = false
repository = "https://github.com/Fair-Squares/fair-squares"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
enum-iterator = "1.4.1"
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0"}
frame-system = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0" }
frame-benchmarking = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0", optional = true }
pallet-sudo = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0" }
pallet-nfts = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0" }
pallet-balances = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0" }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0", default-features = false }
pallet-roles = { default-features = false, path="../roles" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0" }
sp-runtime = { default-features = false,git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0" }
serde = { version = "1.0.183", optional = true, features = ["derive"] }

[dev-dependencies]
sp-core = { default-features = false,git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0" }
sp-io = { default-features = false,git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0" }
sp-runtime = { default-features = false,git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.7.0" }

[features]
default = ["std"]
std = [
	"serde/std",
	"codec/std",
	"scale-info/std",
	"pallet-balances/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-sudo/std",
	"pallet-nfts/std",
	"sp-std/std",
	"pallet-roles/std",
	"pallet-collective/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	]
try-runtime = ["frame-support/try-runtime"]

