[package]
name = "pallet-onboarding"
version = "4.0.0-dev"
description = "Roles management Pallet"
authors = ["Fair Squares"]
homepage = "https://fair-squares.nl"
edition = "2021"
license = "Apache 2.0"
publish = false
repository = "https://github.com/Fair-Squares/fair-squares"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-std = { default-features = false, version = "8.0.0", git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sp-runtime = { version = "24.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
frame-benchmarking = {  default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
frame-support = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
frame-system = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
serde = { version = "1.0.183", default-features = false, features = ["derive"] }
pallet-balances = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
pallet-sudo = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk",  branch = "master", default-features = false }
pallet-nfts = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
pallet-democracy = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "master"}
pallet-scheduler = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "master"}
pallet-utility = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "master"}
pallet-nft = { default-features = false, path="../nft" }
pallet-roles = { default-features = false, path="../roles" }
pallet-housing_fund = { default-features = false, path="../housing_fund" }
parity-scale-codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = [
	"derive",
] }
[dev-dependencies]
sp-core = { version = "21.0.0", git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sp-io = { version = "23.0.0", git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sp-runtime = { version = "24.0.0", git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"sp-std/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde/std",
	"pallet-balances/std",
	"pallet-sudo/std",
	"pallet-collective/std",
    "pallet-democracy/std",
	"pallet-scheduler/std",
    "pallet-nfts/std",
    "pallet-nft/std",
    "pallet-housing_fund/std",
    "pallet-roles/std",
	"pallet-utility/std",
    
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	]

try-runtime = [
	"frame-support/try-runtime",
	]
