[package]
name = "pallet-roles"
version = "4.0.0-dev"
description = "Roles management Pallet"
authors = ["Fair Squares"]
homepage = "https://fair-squares.nl"
edition = "2021"
license = "Apache 2.0"
publish = false
repository = "https://github.com/Fair-Squares/fair-squares"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-std = { default-features = false, version = "8.0.0", git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.5.0" }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
sp-runtime = { version = "24.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.5.0" }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
frame-benchmarking = {   default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.5.0" }
frame-support = {   default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.5.0" }
frame-system = {   default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.5.0" }
serde = { version = "1.0.183", default-features = false, features = ["derive"] }
pallet-balances = {   default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.5.0" }
pallet-sudo = {   default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.5.0" }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.5.0", default-features = false }

[dev-dependencies]
sp-core = { version = "21.0.0", git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.5.0" }
sp-io = { version = "23.0.0", git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.5.0" }
sp-runtime = { version = "24.0.0", git = "https://github.com/paritytech/polkadot-sdk",  branch = "release-polkadot-v1.5.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde/std",
	"sp-std/std",
	"pallet-balances/std",
	"pallet-sudo/std",
	"pallet-collective/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	]

try-runtime = [
	"frame-support/try-runtime",
	]
